# Resume

./: .gitignore  404.html  README.md  about_me.py  app.py  index.html  main.py  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  rxconfig.py  style.css  vite.config.ts
.github/workflows/: deploy.yml  resume-deploy.yml
.streamlit/: config.toml
Experience/: index.html
Resume/: Resume.py
Skills/: index.html
assets/: index-BpCvVO6K.js  index-C_u_B59K.css  index-DKV-Z8hz.css  index-FdHgrjcq.js  index-Zr7vzOHR.js  index-dzhrk7V1.css
docs/: Experience.md  Skills.md  index.md
search/: search_index.json
src/: App.tsx  utils.ts
