[project]
name = "resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.0",
    "neoteroi-mkdocs>=1.2.0",
    "python-dateutil>=2.9.0.post0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
